k8s/01-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-person
  labels:
    purpose: ms-person
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-person
  template:
    metadata:
      name: ms-person
      labels:
        app: ms-person
    spec:
      containers:
      - name: ms-person
        image: ms-person:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 80
#        readinessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 5
#          periodSeconds: 10
#        livenessProbe:
#          tcpSocket:
#            port: 8080
#          initialDelaySeconds: 15
#          periodSeconds: 20
