k8s/02-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-person
spec:
  selector:
    app: ms-person
  ports:
    - protocol: TCP
      port: 8080
